--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <!-- 
     =====================================================
     FONTS
-    Using Inter (clean, modern sans-serif) and Playfair Display (cinematic serif)
+    Using Inter (clean, modern sans-serif) and Montserrat (modern sans-serif)
     Change fonts here if you prefer different typography
     =====================================================
   -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&family=Playfair+Display:wght@400;500;600&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&family=Montserrat:wght@400;500;600;700&display=swap"
         rel="stylesheet">
 
     <link rel="stylesheet" href="styles.css">
